# Basics-of-programming-labs

./: CMakeLists.txt  README.md  main_matrix.c  main_vector.c  main_vectorVoid.c
libs/data_structures/matrix/: main_matrix_task.c  matrix.c  matrix.h  matrix_task.c  matrix_task.h
libs/data_structures/vector/: main.c  main_vectorVoid.c  vector.c  vector.h  vectorVoid.h
libs/data_structures/vectorVoid/: vectorVoid.c
libs/files/tasks/: CMakeLists.txt  generating_test_data.c  lab_19.c  main_lab19.c
libs/files/txt/: converted_task_2.txt  converted_task_4.txt  for_verification_task_1.txt  for_verification_task_3.txt  for_verification_task_5.txt  original_task_1.txt  original_task_2.txt  original_task_3.txt  original_task_4.txt  original_task_5.txt
libs/final_of_everything/: lab_20.c  lab_20.h  test_lab_20.c
libs/string/tasks/: CMakeLists.txt  main_lab18_.c  main_string_.c  main_task7_lab18.c  string_.c  string_.h  string_lab18_.c  string_lab18_.h
